[STYLEBOT] Udemy border styles

--- a/StyleBot/udemy.css
+++ b/StyleBot/udemy.css
@@ -18,3 +18,15 @@ body {
 .udlite-in-udheavy {
   color: #d0d0d2;
 }
+
+.tabs--tabs-container--3KpSm .tabs--tabs-nav-buttons--1S7wK {
+  box-shadow: inset 0 -1px 0 0 darkgrey;
+}
+
+.section--section--BukKG {
+  border-bottom: 1px solid darkgrey
+}
+
+.sidebar--content---4z0- {
+  border: 1px solid darkgrey;
+}
